--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,10 @@ lib_deps =
 build_flags =
   ${config.build_flags}
   ${config:KNX_FLASH_RP2040.build_flags}
-  -D SERIAL_DEBUG=Serial
   -D PIO_FRAMEWORK_ARDUINO_ENABLE_RTTI
   -D LWIP_DONT_PROVIDE_BYTEORDER_FUNCTIONS
+  -D SMALL_GROUPOBJECT
+  -D SERIAL_DEBUG=Serial
   -O2
 lib_deps =
   ${config.lib_deps}
@@ -45,7 +46,7 @@ build_type = debug
 build_flags =
    ${config:RP2040.build_flags}
    ${config:DEBUG.build_flags}
-  -D BOARD_SOM_UP
+  -D BOARD_GW_UP1_ELCOM_1N
 
 [env:upload_USB_RP2040]
 extends = UPLOAD_USB_RP2040, env:build_RP2040
@@ -54,10 +55,10 @@ extends = UPLOAD_USB_RP2040, env:build_RP2040
 extends = UPLOAD_JLINK, env:build_RP2040
 
 ; Releases
-[env:release_SOM_UP]
+[env:release_GW_UP1_ELCOM_1N]
 extends = RP2040
 build_flags =
    ${config:RP2040.build_flags}
   -D DEBUG_WAIT_FOR_SERIAL=1000
   -D WATCHDOG
-  -D BOARD_SOM_UP
+  -D BOARD_GW_UP1_ELCOM_1N
