--- a/platformio.ini
+++ b/platformio.ini
@@ -3,15 +3,13 @@ libdeps_dir = /tmp/libdeps
 extra_configs =
   lib/OGM-Common/platformio.base.ini
 
-[env:pre_and_post_hooks]
-extra_scripts = pre:scripts/copy_headers.py
-
 ; default build parameters
 [config]
 build_flags =
   ${config:COMMON.build_flags}
   ; -D WATCHDOG
 lib_deps =
+  https://github.com/OpenKnx/OFM-Updater
 
 [config:SAMD]
 build_flags =
@@ -40,19 +38,20 @@ build_flags =
   -D DEBUG_HEARTBEAT
 lib_deps =
 
-[env:build_RP2040]
+[env:debug_RP2040]
 extends = RP2040
 build_type = debug
 build_flags =
    ${config:RP2040.build_flags}
    ${config:DEBUG.build_flags}
   -D BOARD_GW_UP1_ELCOM_1N
+  -D DEBUG
 
 [env:upload_USB_RP2040]
-extends = UPLOAD_USB_RP2040, env:build_RP2040
+extends = UPLOAD_USB_RP2040, env:debug_RP2040
 
 [env:upload_JLINK_RP2040]
-extends = UPLOAD_JLINK, env:build_RP2040
+extends = UPLOAD_JLINK, env:debug_RP2040
 
 ; Releases
 [env:release_GW_UP1_ELCOM_1N]
