Add OTA update support

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ extra_configs =
 build_flags =
   ${config:COMMON.build_flags}
   ; -D WATCHDOG
-lib_deps =
+lib_deps = lib/OFM-Updater
 
 [config:SAMD]
 build_flags =
