--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,8 @@ build_flags =
 lib_deps =
   ${config.lib_deps}
   ${config:COMMON.lib_deps}
+board_build.filesystem_size = 0.5m
+debug_tool = raspberrypi-swd
 
 ; debug parameters
 [config:DEBUG]
