--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ build_flags =
    ${config:DEBUG.build_flags}
   -D BOARD_GW_UP1_ELCOM_1N
   -D DEBUG
+board_build.filesystem_size = 0.5m
 
 [env:upload_USB_RP2040]
 extends = UPLOAD_USB_RP2040, env:debug_RP2040
@@ -62,3 +63,4 @@ build_flags =
   -D DEBUG_WAIT_FOR_SERIAL=1000
   -D WATCHDOG
   -D BOARD_GW_UP1_ELCOM_1N
+board_build.filesystem_size = 0.5m
